--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Your browser does not support the HTML canvas tag.
 <script>
 
 
-// Simple vector in 3D with numbers for x, y and z
+// Simple vector in 3D with numbers for x, y and z and scalar with s
 class Vec3
 {
     constructor (x, y, z)
@@ -23,30 +23,57 @@ class Vec3
     // Add other vector to this one and return the result
     add(other)
     {
-        return new Vec3(this.x + other.x, this.y + other.y, this.z + other.z)
+        return new Vec3(this.x + other.x, this.y + other.y, this.z + other.z);
     }
 
     // Subtract other vector from this one and return the result
-    minus(other){}
+    minus(other)
+    {
+        return new Vec3(this.x - other.x, this.y - other.y, this.z - other.z);
+    }
 
     // Multiply other vector by this one and return the result
-    multiply(other){}
+    multiply(other)
+    {
+        return new Vec3(this.x * other.x, this.y * other.y, this.z * other.z);
+    }
 
     // Scale this vector by the number scalar and return the result
-    scale(scalar){}
+    scale(scalar)
+    {
+        return new Vec3(this.x * scalar, this.y * scalar, this.z * scalar);
+    }
     
     // Calculate the dot product of this vector with the other and return the result
-    dot(other) {}
+    dot(other) 
+    {
+        return this.x * other.x + this.y * other.y + this.z * other.z
+    }
 
     // Calculate and return the magnitude of this vector
-    magnitude() {}
+    magnitude() 
+    {
+        return new Vec3(Math.sqrt(Math.pow(this.x, 2), Math.pow(this.y, 2), Math.pow(this.z, 2)));
+    }
     
     // Calculate and return the magnitude of this vector without the square root
-    magnitudeSquared() {}
+    magnitudeSquared() 
+    {
+        return new Vec3(Math.pow(this.x, 2), Math.pow(this.y, 2), Math.pow(this.z, 2));
+    }
 
     // Return a normalised version of this vector
-    normalised() {}
+    normalised() 
+    {
+        const magnitude = 1 / Math.sqrt(Math.pow(this.x, 2), Math.pow(this.y, 2), Math.pow(this.z, 2))
+        if (magnitude === 0) return new Vec3(0, 0, 0)
+        return new Vec3(this.x / magnitude, this.y / magnitude, this.z / magnitude)
+    }
 }
+
+const digit = new Vec3(13, 6, 3)
+const digit2 = new Vec3(26, 12, 6)
+
 
 // A sphere in 3D space. Has centre, radius and colour all of which are Vec3s
 class Sphere
